--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,11 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+<%# if user_signed_in? %>
+<!-- <p>Hello welcomeee you are on our website</p> -->
+<%# else %>
+<!-- <p>not allowed to do anything</p> -->
+<%# end %>
+
+<!-- current_user is the helper method that fetches the user instance from the DB of the user currently logged in -->
+<%#= current_user.email %>
